opam-version: "1.2"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://bitbucket.org/zandoye/ppx_ok_monad/"
bug-reports: "https://bitbucket.org/zandoye/ppx_ok_monad/issues"
license: "MIT"
tags: [
  "ppx"
  "syntax extension"
  "monadic"
]
dev-repo: "hg://https://bitbucket.org/zandoye/ppx_ok_monad"
build: [
  [make]
]
depends: [
  "ocaml-migrate-parsetree" {>="0.6"}
  "dune" {build & >= "1.0"}
]
available: [ocaml-version >= "4.02.3"]
